--- a/.github/workflows/dependabot-tidy.yml
+++ b/.github/workflows/dependabot-tidy.yml
@@ -1,13 +1,6 @@
-name: Auto Tidy for Dependabot PRs
+name: Dependabot Tidy
 
 on:
-  workflow_dispatch:
-    inputs:
-      branch:
-        description: 'Git ref or branch to tidy'
-        required: true
-        default: 'main'
-  
   pull_request:
     types:
       - opened
@@ -15,30 +8,14 @@ on:
 
 jobs:
   tidy:
-    if: github.event_name == 'workflow_dispatch' || github.actor == 'dependabot[bot]'
+    if: github.actor == 'dependabot[bot]'
     runs-on: ubuntu-latest
     steps:
-      - name: Determine ref to checkout
-        id: branch_name
-        run: |
-          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
-            # Use the provided input or fall back to default branch
-            if [ -n "${{ github.event.inputs.branch }}" ]; then
-              echo "ref=${{ github.event.inputs.branch }}" >>"$GITHUB_OUTPUT"
-            else
-              echo "ref=${{ github.ref }}" >>"$GITHUB_OUTPUT"
-            fi
-          else
-            # On a Dependabot PR, use the PR head ref
-            echo "ref=${{ github.event.pull_request.head.ref }}" >>"$GITHUB_OUTPUT"
-            echo "repo=${{ github.event.pull_request.head.repo.full_name }}" >>"$GITHUB_OUTPUT"
-          fi
-
-      - name: Check out code
+      - name: Check out PR head
         uses: actions/checkout@v3
         with:
-          ref: ${{ steps.branch_name.outputs.ref }}
-          repository: ${{ steps.branch_name.outputs.repo || github.repository }}
+          ref: ${{ github.event.pull_request.head.ref }}
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Run make tidy-all
@@ -51,7 +28,7 @@ jobs:
             git config user.email "github-actions[bot]@users.noreply.github.com"
             git add .
             git commit -m "chore: run make tidy-all"
-            git push origin HEAD:${{ steps.branch_name.outputs.ref }}
+            git push origin HEAD:${{ github.event.pull_request.head.ref }}
           else
             echo "No changes after make tidy-all"
           fi
