--- a/e2e/ci-e2e-config.yaml
+++ b/e2e/ci-e2e-config.yaml
@@ -10,7 +10,7 @@
 # | CHAIN_C_TAG          | The tag used for chain C                  | N/A (optional; fallback to A) |
 # | CHAIN_D_TAG          | The tag used for chain D                  | N/A (optional; fallback to A) |
 # | CHAIN_BINARY         | The binary used in the container          | simd                          |
-# | RELAYER_TAG          | The tag used for the relayer              | luca_joss-update-docker-build |
+# | RELAYER_TAG          | The tag used for the relayer              | 1.13.1                        |
 # | RELAYER_ID           | The type of relayer to use (rly/hermes)   | hermes                        |
 
 # see sample.config.yaml for a bare minimum configuration example.
@@ -51,7 +51,7 @@ activeRelayer: hermes # override with RELAYER_ID
 relayers:
   - id: hermes
     image: ghcr.io/informalsystems/hermes
-    tag: "luca_joss-update-docker-build" # v1.13.1 had to be built manually
+    tag: "1.13.1"
   - id: rly
     image: ghcr.io/cosmos/relayer
     tag: "latest"
