--- a/e2e/sample.config.extended.yaml
+++ b/e2e/sample.config.extended.yaml
@@ -10,7 +10,7 @@
 # | CHAIN_C_TAG          | The tag used for chain C                  | Optional (fallback to A)      |
 # | CHAIN_D_TAG          | The tag used for chain D                  | Optional (fallback to A)      |
 # | CHAIN_BINARY         | The binary used in the container          | simd                          |
-# | RELAYER_TAG          | The tag used for the relayer              | luca_joss-update-docker-build |
+# | RELAYER_TAG          | The tag used for the relayer              | 1.13.1                        |
 # | RELAYER_ID           | The type of relayer to use (rly/hermes)   | hermes                        |
 
 # see sample.config.yaml for a bare minimum configuration example.
@@ -58,7 +58,7 @@ activeRelayer: hermes # override with RELAYER_ID
 relayers:
   - id: hermes
     image: ghcr.io/informalsystems/hermes
-    tag: "1.10.4" # override with RELAYER_TAG
+    tag: "1.13.1" # override with RELAYER_TAG
   - id: rly
     image: ghcr.io/cosmos/relayer
     tag: "latest" # override with RELAYER_TAG
