--- a/.github/workflows/dependabot-tidy.yml
+++ b/.github/workflows/dependabot-tidy.yml
@@ -9,14 +9,12 @@ on:
 jobs:
   tidy:
     if: github.actor == 'dependabot[bot]'
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     steps:
-      - name: Check out PR head
-        uses: actions/checkout@v3
-        with:
-          ref: ${{ github.event.pull_request.head.ref }}
-          repository: ${{ github.event.pull_request.head.repo.full_name }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Check out PR
+        uses: actions/checkout@v4
 
       - name: Run make tidy-all
         run: make tidy-all
@@ -28,7 +26,8 @@ jobs:
             git config user.email "github-actions[bot]@users.noreply.github.com"
             git add .
             git commit -m "chore: run make tidy-all"
-            git push origin HEAD:${{ github.event.pull_request.head.ref }}
+            git push
           else
             echo "No changes after make tidy-all"
           fi
+
