--- a/proto/buf.yaml
+++ b/proto/buf.yaml
@@ -1,11 +1,12 @@
 version: v1
 name: buf.build/cosmos/ibc
 deps:
-  - buf.build/cosmos/cosmos-sdk:aa25660f4ff746388669ce36b3778442
-  - buf.build/cosmos/cosmos-proto:1935555c206d4afb9e94615dfd0fad31
+  - buf.build/cosmos/cosmos-sdk:v0.54.0-beta.1
+  - buf.build/cosmos/cosmos-proto:04467658e59e44bbb22fe568206e1f70
   - buf.build/cosmos/gogo-proto:a14993478f40695898ed8a86931094b6656e8a5d
   - buf.build/googleapis/googleapis:8d7204855ec14631a499bd7393ce1970
   - buf.build/cosmos/ics23:b1abd8678aab07165efd453c96796a179eb3131f
+  - buf.build/protocolbuffers/wellknowntypes:3ddd61d1f53d485abd3d3a2b47a62b8e
 breaking:
   use:
     - FILE
