chore: set codecov to be informational in ci checks

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,3 +1,6 @@
+codecov:
+  notify:
+    wait_for_ci: true
 coverage:
   precision: 2
   range:
@@ -8,8 +11,12 @@ coverage:
     project:
       default:
         target: auto
-        threshold: 0%
+        threshold: 5
         base: auto
+        informational: true
+        flags:
+          - ibc-go
+          - 08-wasm
 comment:
   require_changes: "coverage_drop OR uncovered_patch" # Only comment when coverage drops or there is uncovered code in the commit
 ignore:
