--- a/e2e/ci-e2e-config.yaml
+++ b/e2e/ci-e2e-config.yaml
@@ -46,7 +46,7 @@ chains:
     binary: simd # override with CHAIN_BINARY
 
 # activeRelayer must match the id of a relayer specified in the relayers list below.
-activeRelayer: hermes # override with RELAYER_ID
+activeRelayer: rly # override with RELAYER_ID
 
 relayers:
   - id: hermes
