--- a/e2e/ci-e2e-config.yaml
+++ b/e2e/ci-e2e-config.yaml
@@ -76,6 +76,6 @@ upgrades:
   - planName: "v8.1"
     tag: "v8.1.0"
   - planName: "v10"
-    tag: "main" # TODO: Update with correct tag as soon as we have a release
+    tag: "v10.1.0"
   - planName: "ibcwasm-v8"
     tag: "v8.0.0-e2e-upgrade"
