chore: add v11 e2e-upgrade-test and upgrade handler for simapp

--- a/.github/workflows/e2e-upgrade.yaml
+++ b/.github/workflows/e2e-upgrade.yaml
@@ -52,6 +52,11 @@ jobs:
             upgrade-plan: v10,
             test: TestV8ToV10ChainUpgrade_Localhost
           },
+          {
+            tag: v10.3.0,
+            upgrade-plan: v11,
+            test: TestV10ToV11ChainUpgrade
+          },
         ]
     steps:
       - uses: actions/checkout@v4
