--- a/e2e/ci-e2e-config.yaml
+++ b/e2e/ci-e2e-config.yaml
@@ -77,5 +77,7 @@ upgrades:
     tag: "v8.1.0"
   - planName: "v10"
     tag: "v10.3.0"
+  - planName: "v11"
+    tag: "v11.0.0"
   - planName: "ibcwasm-v8"
     tag: "v8.0.0-e2e-upgrade"
