chore: bump and fix ci

--- a/.github/workflows/e2e-upgrade.yaml
+++ b/.github/workflows/e2e-upgrade.yaml
@@ -18,7 +18,6 @@ env:
 jobs:
   e2e-upgrade-tests:
     runs-on: depot-ubuntu-22.04-4
-    needs:
     strategy:
       fail-fast: false
       matrix: 
@@ -66,18 +65,18 @@ jobs:
         id: e2e_test
         env:
           CHAIN_IMAGE: '${{ env.DOCKER_IMAGE_NAME }}'
-          CHAIN_A_TAG: '${{ matrix.test-config.tag }}'
-          CHAIN_B_TAG: '${{ matrix.test-config.tag }}'
-          CHAIN_UPGRADE_PLAN: '${{ matrix.test-config.upgrade-plan }}'
+          CHAIN_A_TAG: "${{ matrix['test-config'].tag }}"
+          CHAIN_B_TAG: "${{ matrix['test-config'].tag }}"
+          CHAIN_UPGRADE_PLAN: "${{ matrix['test-config']['upgrade-plan'] }}"
           E2E_CONFIG_PATH: 'ci-e2e-config.yaml'
         run: |
           cd e2e
-          make e2e-test test=${{ matrix.test }}
+          make e2e-test test=${{ matrix['test-config'].test }}
       - name: Upload Diagnostics
         uses: actions/upload-artifact@v4
         if: ${{ failure() }}
         continue-on-error: true
         with:
-          name: '${{ matrix.entrypoint }}-${{ matrix.test }}'
+          name: "${{ matrix['test-config'].test }}"
           path: e2e/diagnostics
           retention-days: 5
