--- a/e2e/ci-e2e-config.yaml
+++ b/e2e/ci-e2e-config.yaml
@@ -76,6 +76,6 @@ upgrades:
   - planName: "v8.1"
     tag: "v8.1.0"
   - planName: "v10"
-    tag: "v10.3.0"
+    tag: "branch-release-v10.4.x"
   - planName: "ibcwasm-v8"
     tag: "v8.0.0-e2e-upgrade"
