--- a/codecov.yml
+++ b/codecov.yml
@@ -25,7 +25,7 @@ ignore:
 - "docs"
 - "simapp"
 - "testing"
-- "modules/light-clients/08-wasm/testing"
+- "**/testing/**"
 - "scripts"
 - "contrib"
 - "cmd"
