imp: gmp packet work PacketDataUnmarshaler/PacketDataProvider (#8730)
* PacketDataUnmarshaler and PacketDataProvider for GMP

* lint

* shorten comment

* imp: remove callback key

* extend tests

* bad merge fix

* recursive codecov ignore

* simplify codecov ignore

---------

Co-authored-by: srdtrk <srdtrk@hotmail.com>

--- a/codecov.yml
+++ b/codecov.yml
@@ -24,8 +24,7 @@ ignore:
 - "**/*.pb.gw.go"
 - "docs"
 - "simapp"
-- "testing"
-- "modules/light-clients/08-wasm/testing"
+- "**/testing/**"
 - "scripts"
 - "contrib"
 - "cmd"
