feat: added ics27-2 gmp application (#8352)
* feat: added proto types

* chore: ran proto-all

* chore: generate proto

* imp: added type helpers

* imp: added new proto

* imp: added query.proto

* chore: gen proto types

* imp: regen proto

* imp: save progress

* feat: implemented basic module with autocli

* imp: added ibc boilerplate

* feat: add module to simapp

* imp: added account keeper

* imp: remoce ics4wrapper

* imp: implemented first message server

* imp: verify autocli

* imp: implemented OnSendPacket

* imp: implemented ack and timeout entry points

* imp: more boilerplate

* imp: added ack to proto

* imp: added ack helpers

* imp: more boilerplate

* feat: added account gen

* imp: added cosmos tx

* imp: implemented receive

* imp: implemented query

* lint

* imp: added gmp to wasm simapp

* style: lint

* style: lint

* chore: bump go version

* imp: attempt to improve module wiring

* imp: fix attempt

* imp: removed gmp from unused simapp

* fix: keeper wiring

* imp: allow receiver to be empty

* imp: added logger

* imp: no err if acc already exists

* deps: go mod tidy

* fix: compiler problems

* imp: allow protojson

* imp: added NewMsgSendCall

* lint: issues

* docs: add PICKUP to gmp

* docs: added pickup doc

* fix(gmp): fix keeper initialization and packet unmarshaling (#8660)

Fix two critical bugs in ICS27-GMP module:

  1. keeper: Initialize msgRouter and accountKeeper fields that were
     being passed to NewKeeper but not assigned to the keeper struct,
     causing nil pointer panics when routing messages

  2. packet: Fix UnmarshalPacketData to use correct Go unmarshal pattern
     by initializing pointer before passing to json.Unmarshal instead of
     passing pointer-to-pointer

* docs: godocs

* imp: added accounts_by_address

* chore: update proto

* chore: regen proto

* chore: implemented query server

* imp: added GetAccount

* test: add tests for 27-gmp module (#8728)

* gmp tests

* lint

* add codec test

* add gene

--- a/codecov.yml
+++ b/codecov.yml
@@ -24,8 +24,9 @@ ignore:
 - "**/*.pb.gw.go"
 - "docs"
 - "simapp"
+- "**/testing/**"
 - "testing"
-- "modules/light-clients/08-wasm/testing"
 - "scripts"
 - "contrib"
 - "cmd"
+- "e2e"
